@@ -230,7 +230,7 @@
                         <groupId>org.apache.maven.plugins</groupId>
                         <artifactId>maven-javadoc-plugin</artifactId>
                         <configuration>
-                            <!-- Override source to avoid conflict: --add-modules is not allowed with source 8 -->
+                            <!-- Override source to avoid conflict between add-modules and source 8 -->
                             <source>9</source>
                             <additionalOptions>--add-modules jdk.jdi</additionalOptions>
                         </configuration>
